--- a/composer.json
+++ b/composer.json
@@ -5,5 +5,10 @@
     },
     "require-dev": {
         "phpunit/phpunit": "^7.4"
+    },
+    "autoload": {
+        "psr-4": {
+            "App\\": "src/"
+        }
     }
 }
