--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,8 @@
 {
     "name": "mkietlinski/emails-filter",
     "require": {
-        "symfony/console": "^4.1"
+        "symfony/console": "^4.1",
+        "phpoffice/phpspreadsheet": "^1.4"
     },
     "require-dev": {
         "phpunit/phpunit": "^7.4"
@@ -9,6 +10,11 @@
     "autoload": {
         "psr-4": {
             "App\\": "src/"
+        }
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "App\\Tests\\": "tests/"
         }
     }
 }
